Replace UTF8 hyphen with dash

--- a/views/comingSoon.html
+++ b/views/comingSoon.html
@@ -3,5 +3,9 @@
 <head></head>
 <h1>Sorry, we haven't made this content yet!</h1>
 
-<a href="/">Return to ELVIS – Foundation Spatial Data</a>
+<a href="/start.html">Return to Foundation Spatial Data</a><br/>
+<a href="/">Return to ELVIS - Foundation Spatial Data</a><br/>
+<a href="/imagery.html">Return to Imagery - Foundation Spatial Data</a><br/>
+<a href="/water.html">Return to Water - Foundation Spatial Data</a>
+
 </html>
