--- a/source/icsm/view/view.html
+++ b/source/icsm/view/view.html
@@ -1,4 +1,4 @@
-<div class="container-fluid downloadInner" >
+<div class="container-fluid downloadPane" >
 	<div class="row">
 		<div class="col-md-12">
 			<h4><icsm-wms data="data.item" ng-title="data.item.abstract"></icsm-wms>{{data.item.title}}</h4>
