--- a/source/common/header/header.css
+++ b/source/common/header/header.css
@@ -1,3 +1,13 @@
+.nav-icons {
+   margin-top: 7px !important;
+}
+
+@media only screen and (max-width:1200px) {
+   .nav-icons {
+      margin-top: 30px;
+   }
+}
+
 .breadcrumbsContainer {
    margin-left: 245px;
 }
