--- a/source/common/navigation/alththemes.css
+++ b/source/common/navigation/alththemes.css
@@ -1,50 +1,101 @@
-
 .altthemes-icon {
-	background: url("../../../resources/img/alt-sprites.svg") no-repeat;
-   display: inline-block;
-   width: 25px;
-   height: 40px;
-   margin: 0 auto 0 auto;
+  background: url("../../../resources/img/dbl_sprites.svg") no-repeat;
+  display: inline-block;
+  width: 40px;
+  height: 62px;
+  margin: 0 auto 0 auto;
 }
 
 .altthemes-pin {
-    background-position: 0px;
+  background-position: 0px;
 }
 
 .altthemes-map {
-    background-position: -25px;
+  background-position: -40px;
 }
 
 .altthemes-crosshair {
-    background-position: -50px;
+  background-position: -80px;
 }
 
 .altthemes-sign {
-    background-position: -75px;
+  background-position: -120px;
 }
 
 .altthemes-parcel {
-    background-position: -100px;
+  background-position: -160px;
 }
 
 .altthemes-satellite {
-    background-position: -125px;
+  background-position: -200px;
 }
 
 .altthemes-ship {
-    background-position: -150px;
+  background-position: -240px;
 }
 
 .altthemes-water {
-	background-position: -175px;
+  background-position: -280px;
 }
 
 .altthemes-shore {
-	background-position: -200px;
+  background-position: -320px;
 }
 
 .altthemes-land {
-	background-position: -225px;
+  background-position: -360px;
+}
+
+
+@media only screen and (max-width:1200px) {
+  .altthemes-icon {
+    background: url("../../../resources/img/alt-sprites.svg") no-repeat;
+    display: inline-block;
+    width: 25px;
+    height: 40px;
+    margin: 0 auto 0 auto;
+  }
+
+  .altthemes-pin {
+    background-position: 0px;
+  }
+
+  .altthemes-map {
+    background-position: -25px;
+  }
+
+  .altthemes-crosshair {
+    background-position: -50px;
+  }
+
+  .altthemes-sign {
+    background-position: -75px;
+  }
+
+  .altthemes-parcel {
+    background-position: -100px;
+  }
+
+  .altthemes-satellite {
+    background-position: -125px;
+  }
+
+  .altthemes-ship {
+    background-position: -150px;
+  }
+
+  .altthemes-water {
+    background-position: -175px;
+  }
+
+  .altthemes-shore {
+    background-position: -200px;
+  }
+
+  .altthemes-land {
+    background-position: -225px;
+  }
+
 }
 
 .altthemesItemCompact {
