Add the download continuation button to elvis view

--- a/source/icsm/view/view.html
+++ b/source/icsm/view/view.html
@@ -6,4 +6,5 @@
 	</div>
 	<icsm-clip data="data.item"></icsm-clip>
 	<icsm-list></icsm-list>
+	<div class="downloadCont" icsm-search-continue></div>
 </div>
