--- a/source/icsm/view/view.css
+++ b/source/icsm/view/view.css
@@ -1,4 +1,17 @@
 .downloadPane {
    padding-left:5px !important;
    padding-right:5px !important;
+   position: absolute;
+   left:0;
+   right:0;
+   top:0;
+   bottom:42px;
+   overflow-y:auto;
+   overflow-x: hidden;
+}
+
+.downloadCont {
+   position: fixed;
+   right:0;
+   bottom:8px;
 }
