--- a/source/icsm/app/app.css
+++ b/source/icsm/app/app.css
@@ -205,3 +205,7 @@ input.ng-valid.ng-touched {
 .footerAccessibilityItem {
 	display:none!important;
 }
+
+.elevationFixedBottom {
+   border: 1px solid gray;
+}
