--- a/source/icsm/results/results.css
+++ b/source/icsm/results/results.css
@@ -57,3 +57,24 @@
 .icsm-abstract-body h3 {
    display: none;
 }
+
+.filter-text {
+   float:left;
+   width:60%;
+}
+
+.filter-type {
+   float:right;
+}
+
+@media screen and (max-width: 1280px) {
+   .filter-text {
+      width:100%;
+      float: clear;
+   }
+
+   .filter-type {
+      width:100%;
+      float: clear;
+   }
+}
