--- a/source/icsm/view/view.html
+++ b/source/icsm/view/view.html
@@ -5,6 +5,8 @@
   			</div>
 	</div>
 	<icsm-clip data="data.item"></icsm-clip>
-	<icsm-list></icsm-list>
+   <div class="list-container">
+	   <icsm-list></icsm-list>
+   </div>
 	<div class="downloadCont" icsm-search-continue></div>
 </div>
