--- a/source/placenames/results/results.css
+++ b/source/placenames/results/results.css
@@ -1,9 +1,11 @@
 .pn-container {
+   overflow-y:auto;
    position: absolute;
    top: 10px;
    bottom: 0px;
    left: 0px;
    right: 7px;
+   margin-bottom:0;
 }
 
 .pn-results {
