--- a/source/placenames/search/seach.css
+++ b/source/placenames/search/seach.css
@@ -1,4 +1,4 @@
-.placenames-features {
+.pn-features {
    max-block-size: 300px;
    overflow-y:auto;
    overflow-x: hidden;
@@ -12,7 +12,7 @@
    max-width: 350px;
 }
 
-.pnPill {
+.pn-pill {
     color: #fff;
     margin:4px;
 }
