--- a/source/icsm/contributors/contributors.css
+++ b/source/icsm/contributors/contributors.css
@@ -1,16 +1,14 @@
 .contributors {
-   border: 1px solid gray;
-   border-radius: 3px;
    margin: 2px;
    padding: 4px;
    padding-left:12px;
    position: fixed;
-   top: 81px;
-   left: 0px;
-   right: 0px;
+   top: 80px;
+   right: 1px;
    opacity: 0.95;
    z-index: 6;
    background-color:white;
+   white-space: nowrap;
 
    -webkit-transition: height 1s; /* Safari */
    transition: height 1s;
@@ -29,12 +27,9 @@
    display: none;
 }
 
-.anchored {
-   position: absolute;
-   bottom: 4px;
-}
-
 .contributors.transitioned-down {
+   border: 1px solid gray;
+   border-radius: 3px;
    height: 85px;
 }
 
@@ -51,4 +46,18 @@
    margin: 0;
    padding: 0;
    border-radius: 0;
+}
+
+.contributors-unstick {
+   vertical-align: top;
+   font-weight: bold;
+}
+
+.contributors-link {
+   font-weight: bold;
+}
+
+.elevation-and-depth {
+   padding-left: 12px;
+   padding-right: 12px;
 }
