Tweak form for CVS and Shapefile post review.

--- a/source/positioning/dialog/dialog.css
+++ b/source/positioning/dialog/dialog.css
@@ -2,3 +2,9 @@
     padding: 15px;
     margin-top: 10px;
 }
+.ud-info {
+   background-color: #d9edf7;
+   margin-top: 10px;
+   padding: 5px;
+   border-radius: 4px;
+}
