Make place names a bit nicer if no WFS available

--- a/source/placenames/results/results.css
+++ b/source/placenames/results/results.css
@@ -37,3 +37,10 @@
    border-bottom:  0;
    padding-bottom: 0;
 }
+
+.pn-item-footer {
+   padding-top:5px;
+   padding-bottom:5px;
+   background-color:#f8f8ff;
+   border-top:1px solid #f0f0f0
+}
