Change the way extents are handled.

--- a/source/icsm/view/view.html
+++ b/source/icsm/view/view.html
@@ -1,7 +1,8 @@
-<div class="container-fluid downloadPane" >
-	<icsm-clip data="data.item"></icsm-clip>
+<div class="container-fluid downloadPane">
+   <icsm-clip data="data.item"></icsm-clip>
+   <icsm-message></icsm-message>
    <div class="list-container">
-	   <icsm-list></icsm-list>
+      <icsm-list></icsm-list>
    </div>
-	<div class="downloadCont" icsm-search-continue></div>
+   <div class="downloadCont" icsm-search-continue></div>
 </div>
