--- a/source/icsm/app/app.css
+++ b/source/icsm/app/app.css
@@ -104,11 +104,8 @@ img.logo {
 	position : fixed;
 	top : 112px;
 	bottom : 8px;
-	left:0;
+	left:0px;
 	right:0px;
-	width:100%;
-	margin:0;
-	padding:0px;
 }
 
 .mapContainer {
