Put in limit on download size

--- a/source/icsm/results/continue.css
+++ b/source/icsm/results/continue.css
@@ -2,6 +2,13 @@
    padding: 4px;
 }
 
+.warn-limit {
+   padding: 15px;
+   margin-bottom: 5px;
+   border: 1px solid transparent;
+   border-radius: 4px;
+}
+
 .listItemHeading {
 	font-weight: bold;
 }
