--- a/source/icsm/point/point.css
+++ b/source/icsm/point/point.css
@@ -2,6 +2,10 @@
    background-image: url(/icsm/resources/img/mountain24.png);
 }
 
+.leaflet-control-alt-elevation {
+   background-image: url(/icsm/resources/img/alt_mountain24.png);
+}
+
 .elevation-popup {
    max-width:380px;
    display: inline-flex;
