--- a/source/common/header/header.css
+++ b/source/common/header/header.css
@@ -12,12 +12,17 @@
    margin-left: 245px;
 }
 
-.header-logo img {
-   padding-top: 3px;
+.applicationTitle {
+   display: inline-block;
+   font-size: large;
+   color: #2f2f2f;
+   font-weight: bold;
+   margin: 0;
+   padding: 0;
 }
 
 .header-logo {
-   padding-right: 20px;
+   width: 80px;
 }
 
 .applicationTitle {
