Make the toolbar a bit smaller on small page width

--- a/source/common/side-panel/side-panel.css
+++ b/source/common/side-panel/side-panel.css
@@ -90,3 +90,9 @@
 .cbp-spmenu-open .left-side-menu-container, .cbp-spmenu-open .right-side-menu-container  {
   overflow-y: auto;
 }
+
+@media (max-width: 991px) {
+   .panel-sm {
+      display: none !important;
+   }
+}
